Bug 1179780 - Render opaque scrollbar troughs in the root viewport on GTK3. r=karlt